--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,6 @@ h3, h4, h5, h6 {
 	vertical-align: top;
 }
 
-.form .btn {
-}
-
 #file {
 	visibility: none;
 	width: 0px;
@@ -191,14 +188,26 @@ h3, h4, h5, h6 {
 }
 
 #side-bar li {
-	padding: 20px;
-	padding-left: 40px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+#side-bar li a {
+  padding: 20px !important;
+  padding-left: 40px !important;
+	display: inline-block;
 	width: 100%;
+	height: 100%;
+	padding: 0px;
+	margin: 0px;
+  font-size: 20px;
 	color: white;
-	font-size: 20px;
-	cursor: pointer;
-	margin-top: 10px;
-	margin-bottom: 10px;
+}
+
+#side-bar li a:hover {
+	text-decoration: none;
+	color: white;
 }
 
 #side-bar li:hover {
@@ -206,11 +215,14 @@ h3, h4, h5, h6 {
 }
 
 #side-bar li.selected {
-	padding-top: 19px;
   border-top: 1px solid #222;
-	padding-bottom: 19px;
   border-bottom: 1px solid #555;
-	background: #333;
+  background: #333;
+}
+
+#side-bar li.selected a {
+	padding-top: 19px;
+  padding-bottom: 19px;
 }
 
 #progress {
